--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,15 @@
 {{!-- navigator --}}
 <nav>
 <div class="nav">
-
+<img src="https://raw.githubusercontent.com/ALPHACamp/WFE-data-table/0f97f3113bff18353154b8644eb0b31fff2a3bef/icons/logo.svg" width="100" height="100" class="nav-logo" alt="nav-logo">
+<img src="https://raw.githubusercontent.com/ALPHACamp/WFE-data-table/0f97f3113bff18353154b8644eb0b31fff2a3bef/icons/frame.svg"
+  width="100" height="100" class="navicon nav-frame checked" alt="nav-frame">
+<img src="https://raw.githubusercontent.com/ALPHACamp/WFE-data-table/0f97f3113bff18353154b8644eb0b31fff2a3bef/icons/folder.svg"
+  width="100" height="100" class="navicon nav-folder" alt="nav-folder">
+<img src="https://raw.githubusercontent.com/ALPHACamp/WFE-data-table/0f97f3113bff18353154b8644eb0b31fff2a3bef/icons/mail.svg"
+  width="100" height="100" class="navicon nav-mail" alt="nav-mail">
+<img src="https://raw.githubusercontent.com/ALPHACamp/WFE-data-table/0f97f3113bff18353154b8644eb0b31fff2a3bef/icons/darkmode-on.svg"
+  width="100" height="100" class="navicon nav-darkmodeon" alt="nav-darkmodeon">
 </div>
 </nav>
 
@@ -18,20 +26,20 @@
 <table class="table">
   <thead>
   <tr class="table-header">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">ID</th>
     <th class="table-name">Name</th>
     <th class="table-advertiser">Advertiser <p class="table-group">Group</p></th>
     <th class="table-description">Description</th>
-    <th class="table-price">Price</th>
-    <th class="table-starttime">Start Time</th>
-    <th class="table-endtime">End Time</th>
+    <th class="table-price"><p>Price</p></th>
+    <th class="table-starttime"><p>Start Time</p></th>
+    <th class="table-endtime"><p>End Time</p></th>
     <th class="table-action">Action</th>
   </tr>
   </thead>
   <tbody class="scrollbar">
   <tr class="table-white">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p></th>
@@ -39,10 +47,12 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   <tr class="table-gray">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p>
@@ -51,10 +61,12 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   <tr class="table-white">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p>
@@ -63,10 +75,12 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   <tr class="table-gray">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p>
@@ -75,10 +89,12 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   <tr class="table-white">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p>
@@ -87,10 +103,12 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   <tr class="table-gray">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p>
@@ -99,10 +117,12 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   <tr class="table-white">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p>
@@ -111,10 +131,12 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   <tr class="table-gray">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>    
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>    
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p>
@@ -123,10 +145,12 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   <tr class="table-white">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p>
@@ -135,10 +159,12 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   <tr class="table-gray">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p>
@@ -147,10 +173,12 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   <tr class="table-white">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p>
@@ -159,10 +187,12 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   <tr class="table-gray">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p>
@@ -171,10 +201,12 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   <tr class="table-white">
-    <th class="checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
+    <th class="table-checkbox"><input type="checkbox" id="checkbox" name="checkbox" /></th>
     <th class="table-id">1</th>
     <th class="table-name">Christmas 2020</th>
     <th class="table-advertiser">Food Market<p class="table-group">Krab</p>
@@ -183,7 +215,9 @@
     <th class="table-price">$2000</th>
     <th class="table-starttime">2020/12/24 19:30</th>
     <th class="table-endtime">2021/01/02 23:00</th>
-    <th class="table-action">Action</th>
+    <th class="table-action"><label class="nav-action" for="navbar-toggle">
+      <span class="hamburger"></span>
+    </label></th>
   </tr>
   </tbody>
 </table>
